Delete not needed section

--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -344,8 +344,8 @@
   </p>
   {% endcomment %}
 </div> {% comment %} End of 'Python' section. {% endcomment %}
-<!--
-<div id="r"> {% comment %} Start of 'R' section. {% endcomment %}
+
+<!-- <div id="r"> {% comment %} Start of 'R' section. {% endcomment %}
   <h3>R</h3>
 
   <p>
@@ -535,4 +535,4 @@
     </li>
   </ol>
 </div>
-{% endcomment %} --!>
+{% endcomment %} -->
